--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,22 +53,30 @@ body {
   width: 75%;
   margin: 1rem auto;
 }
-.save-button {
+.save-button, .delete-button, .update-button {
+  width: 50px;
   position: absolute;
-  top: 25px;
   right: 25px;
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: lightseagreen;
+  text-align: center;
 }
-.save-button:hover {
+.save-button:hover, .delete-button:hover, .update-button:hover {
   background-color: green;
   color: white;
 }
+.save-button {top: 25px;}
+.delete-button {top: 60px;}
+.update-button {top: 95px;}
 
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
+}
+
+.home-button > a {
+  margin: 5px;
 }
 
 .movie-warning {
